Bug 67889 - [Chromium] The checked state of WebPopupMenuItem isn't initialized
Summary: [Chromium] The checked state of WebPopupMenuItem isn't initialized
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Adam Barth
URL:
Keywords:
Depends on:
Blocks: 66687
  Show dependency treegraph
 
Reported: 2011-09-10 01:53 PDT by Adam Barth
Modified: 2011-09-13 14:42 PDT (History)
4 users (show)

See Also:


Attachments
Patch (1.74 KB, patch)
2011-09-10 01:54 PDT, Adam Barth
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Barth 2011-09-10 01:53:28 PDT
[Chromium] The checked state of WebPopupMenuItem isn't initialized
Comment 1 Adam Barth 2011-09-10 01:54:53 PDT
Created attachment 106973 [details]
Patch
Comment 2 Adam Barth 2011-09-10 01:55:40 PDT
I don't fully understand this patch.  If someone else can explain why this diff exists in the Android branch, I'd appreciate that.
Comment 3 Darin Fisher (:fishd, Google) 2011-09-10 17:36:15 PDT
Comment on attachment 106973 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=106973&action=review

> Source/WebKit/chromium/ChangeLog:10
> +        use popup menus for <select> elements.

the mac port uses "external" popup menus for select elements too.


this parch seems fine to me, but i'd also like to know the answer to your
question.  perhaps jcivelli knows?
Comment 4 Peter Beverloo 2011-09-13 06:09:24 PDT
The WebMenuItemInfo struct contained the checked property already, but since it wasn't being set in the ExternalPopupMenu::getPopupMenuInfo method it didn't propagate correctly to Chrome.  The information will be used for implementing select boxes which accept multiple answers, for which we'll indeed need an external menu.
Comment 5 Adam Barth 2011-09-13 13:40:55 PDT
Comment on attachment 106973 [details]
Patch

Ok.
Comment 6 WebKit Review Bot 2011-09-13 14:42:20 PDT
Comment on attachment 106973 [details]
Patch

Clearing flags on attachment: 106973

Committed r95045: <http://trac.webkit.org/changeset/95045>
Comment 7 WebKit Review Bot 2011-09-13 14:42:25 PDT
All reviewed patches have been landed.  Closing bug.