[Chromium] The checked state of WebPopupMenuItem isn't initialized https://bugs.webkit.org/show_bug.cgi?id=67889

Reviewed by Darin Fisher.

It seems we're failing to initialize the checked state of
WebPopupMenuItems, potentially because Android is the first platform to
use popup menus for <select> elements.

* src/ExternalPopupMenu.cpp:
(WebKit::ExternalPopupMenu::getPopupMenuInfo):


Canonical link: https://commits.webkit.org/83928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95045 268f45cc-cd09-0410-ab3c-d52691b4dbfc